# biochemie-bot

./: .gitignore  README.md  config.py.example  main.py  pyproject.toml
biochemie_bot/: __init__.py  bot.py
biochemie_bot/cogs/: developer.py  informatic.py
biochemie_bot/utils/: errors.py  utils.py
biochemie_bot/utils/views/: base.py  botinfo.py
